--- a/css/style.css
+++ b/css/style.css
@@ -80,32 +80,223 @@
 .section-1 {
   height: 695px;
   width: 100vw;
-  /* background-color: green; */
   background-image: url('../img/jumbotron.png');
   background-size: cover;
   background-position: center;
 }
 
+.section-1-left {
+  height: 100%;
+  width: 50%;
+}
+
 .section-2 {
-  height: 500px;
+  height: 1000px;
   width: 100vw;
   background-color: beige;
 }
 
-.section-3 {
-  height: 500px;
+.section-2-top {
+  height:300px;
   width: 100vw;
-  background-color: blue;
+  text-align: center;
+}
+.section-2-top > img {
+  height: 200px;
+}
+
+.section-2-center {
+  height:300px;
+  width: 100vw;
+  text-align: center;
+}
+.section-2-center-1 {
+  height: 300px;
+  width: 20%;
+  float: left;
+}
+.section-2-center-1 > img {
+  height: 150px;
+  display: block;
+}
+.section-2-center-2 {
+  height: 300px;
+  width: 80%;
+  float: left;
+}
+h3 {
+  display: inline-block;
+}
+.h3 {
+  width: 500px;
+  display: inline-block;
+  border-bottom: 1px solid black;
+  vertical-align: middle;
+}
+
+.section-2-bottom-1 {
+  width: 33.33%;
+  float: left;
+}
+.section-2-bottom-2 {
+  width: 33.33%;
+  float: left;
+}
+.section-2-bottom-3 {
+  width: 33.33%;
+  float: left;
+}
+.section-2-bottom-1 > img {
+  height: 150px;
+}
+.section-2-bottom-2 > img {
+  height: 150px;
+}
+.section-2-bottom-3 > img {
+  height: 150px;
+}
+
+.section-3 {
+  width: 100vw;
+  background: linear-gradient(to right, #00ABB6, #00BAA7);
+}
+.section-3::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.section-3-top {
+  width: 100vw;
+}
+
+.section-3-bottom-1 {
+  width: 25%;
+  float: left;
+}
+.section-3-bottom-1 > img {
+  display: block;
+}
+.section-3-bottom-2 {
+  width: 25%;
+  float: left;
+}
+.section-3-bottom-2 > img {
+  display: block;
+}
+.section-3-bottom-3 {
+  width: 25%;
+  float: left;
+}
+.section-3-bottom-3 > img {
+  display: block;
+}
+.section-3-bottom-4 {
+  width: 25%;
+  float: left;
+}
+.section-3-bottom-4 > img {
+  display: block;
+}
+.section-3-bottom-5 {
+  width: 25%;
+  float: left;
+}
+.section-3-bottom-5 > img {
+  height: 45px;
+  display: block;
+}
+.section-3-bottom-6 {
+  width: 25%;
+  float: left;
+}
+.section-3-bottom-6 > img {
+  display: block;
+}
+.section-3-bottom-7 {
+  width: 25%;
+  float: left;
+}
+.section-3-bottom-7 > img {
+  display: block;
+}
+.section-3-bottom-8 {
+  width: 25%;
+  float: left;
+}
+.section-3-bottom-8 > img {
+  display: block;
 }
 
 .section-4 {
-  height: 500px;
   width: 100vw;
   background-color: grey;
 }
+.section-4::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+.section-4-top-left {
+  height: 20%;
+  width: 40%;
+  float: left;
+}
+.section-4-top-right {
+  height: 20%;
+  width: 60%;
+  float: left;
+}
+.section-4-top-right img {
+  height: 40px;
+}
+.section-4-bottom-left {
+  height: 80%;
+  width: 40%;
+  float: left;
+}
+.section-4-bottom-right {
+  height: 80%;
+  width: 60%;
+  float: left;
+}
+.section-4-bottom-right img {
+  height: 200px;
+}
 
 .footer {
-  height: 500px;
+  height: 300px;
   width: 100vw;
   background-color: purple;
+}
+
+.footer-top-1 {
+  width: 25%;
+  float: left;
+}
+.footer-top-2 {
+  width: 25%;
+  float: left;
+}
+.footer-top-3 {
+  width: 25%;
+  float: left;
+}
+.footer-top-4 {
+  width: 25%;
+  float: left;
+}
+
+.footer-bottom-1 {
+  width: 100%;
+  border-bottom: 1px solid white;
+}
+.footer-bottom-2-1{
+  width: 50%;
+  float: left;
+}
+.footer-bottom-2-1{
+  width: 50%;
+  float: left;
 }
