--- a/css/style.css
+++ b/css/style.css
@@ -48,14 +48,14 @@
 }
 .list-left a {
   text-decoration: none;
-  color: #425B76;
+  color: #33475B;
 }
 .list-left a:hover {
   text-decoration: underline;
 }
 #language {
   padding-right: 10px;
-  border-right: 1px solid #425B76;
+  border-right: 1px solid #33475B;
 }
 #contact-us {
   padding-left: 10px;
@@ -136,11 +136,11 @@
   height: 100%;
   margin-left: 10px;
   cursor: pointer;
-  color: #425B76;
+  color: #33475B;
 }
 .menu a {
   text-decoration: none;
-  color: #425B76;
+  color: #33475B;
 }
 .menu a:hover {
   text-decoration: underline;
@@ -154,45 +154,78 @@
   background-image: url('../img/jumbotron.png');
   background-size: cover;
   background-position: center;
+  border-bottom: 3px solid #33475C;
 }
 
 .section-1-left {
   height: 100%;
   width: 50%;
 }
+.section-1-left h1, p {
+  line-height: 50px;
+  color: #33475B;
+}
+.section-1-left a {
+  text-decoration: none;
+  border: 1px solid #FF7A59;
+  padding: 20px;
+  border-radius: 5px;
+  line-height: 100px;
+  background-color: #FF7A59;
+  color: white;
+}
+.section-1-left a:hover {
+  background-color: #FFBCAC;
+}
 
 .section-2 {
-  height: 1000px;
+  height: 1200px;
   width: 100vw;
-  background-color: beige;
+  background-color: #F5F8FA;
+  color: #33475B;
 }
 
 .section-2-top {
-  height:300px;
-  width: 100vw;
   text-align: center;
 }
-.section-2-top > img {
-  height: 200px;
+.section-2-top img {
+  height: 150px;
+  margin-top: 20px;
 }
 
 .section-2-center {
-  height:300px;
-  width: 100vw;
+  /* height:300px; */
   text-align: center;
+  background-color: white;
 }
 .section-2-center-1 {
-  height: 300px;
+  /* height: 300px; */
   width: 20%;
+  text-align: center;
+  line-height: 50px;
+  padding: 20px;
   float: left;
 }
-.section-2-center-1 > img {
-  height: 150px;
-  display: block;
+.section-2-center-1 img {
+  height: 100px;
+  /* display: block; */
+}
+.section-2-center-1 a {
+  text-decoration: none;
+  border: 1px solid #FF7A59;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: #FF7A59;
+  color: white;
+}
+.section-2-center-1 a:hover {
+  background-color: #FFBCAC;
 }
 .section-2-center-2 {
   height: 300px;
   width: 80%;
+  text-align: left;
+  padding: 20px;
   float: left;
 }
 h3 {
@@ -203,32 +236,106 @@ h3 {
   display: inline-block;
   border-bottom: 1px solid black;
   vertical-align: middle;
+  margin: 0 50px;
+}
+.section-2-center-2 li {
+  display: inline-block;
+  text-decoration: none;
+  margin-top: 20px;
+  margin-right: 20px;
+}
+.section-2-center-2 i {
+  color: #FF7A59;
 }
 
 .section-2-bottom-1 {
   width: 33.33%;
+  text-align: center;
+  line-height: 50px;
   float: left;
 }
 .section-2-bottom-2 {
   width: 33.33%;
+  text-align: center;
+  line-height: 50px;
   float: left;
 }
 .section-2-bottom-3 {
   width: 33.33%;
+  text-align: center;
+  line-height: 50px;
   float: left;
 }
-.section-2-bottom-1 > img {
-  height: 150px;
+.section-2-bottom-1 img {
+  height: 100px;
 }
-.section-2-bottom-2 > img {
-  height: 150px;
+.section-2-bottom-2 img {
+  height: 100px;
 }
-.section-2-bottom-3 > img {
-  height: 150px;
+.section-2-bottom-3 img {
+  height: 100px;
 }
+.section-2-bottom-1 ul {
+  list-style: none;
+  text-align: left;
+}
+.section-2-bottom-2 ul {
+  list-style: none;
+  text-align: left;
+}
+.section-2-bottom-3 ul {
+  list-style: none;
+  text-align: left;
+}
+.section-2-bottom-1 i {
+  color: #FF7A59;
+}
+.section-2-bottom-2 i {
+  color: #FF7A59;
+}
+.section-2-bottom-3 i {
+  color: #FF7A59;
+}
+.section-2-bottom-1 a {
+  text-decoration: none;
+  border: 1px solid #FF7A59;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: #FF7A59;
+  color: white;
+}
+.section-2-bottom-1 a:hover {
+  background-color: #FFBCAC;
+}
+.section-2-bottom-2 a {
+  text-decoration: none;
+  border: 1px solid #FF7A59;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: #FF7A59;
+  color: white;
+}
+.section-2-bottom-2 a:hover {
+  background-color: #FFBCAC;
+}
+.section-2-bottom-3 a {
+  text-decoration: none;
+  border: 1px solid #FF7A59;
+  padding: 20px;
+  border-radius: 5px;
+  background-color: #FF7A59;
+  color: white;
+}
+.section-2-bottom-3 a:hover {
+  background-color: #FFBCAC;
+}
+
+
 
 .section-3 {
   width: 100vw;
+  text-align: center;
+  color: white;
   background: linear-gradient(to right, #00ABB6, #00BAA7);
 }
 .section-3::after {
@@ -236,72 +343,88 @@ h3 {
   display: table;
   clear: both;
 }
+.section-3 p {
+  color: white;
+}
 
 .section-3-top {
-  width: 100vw;
+  /* width: 100vw; */
 }
+
 
 .section-3-bottom-1 {
   width: 25%;
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;
   float: left;
 }
-.section-3-bottom-1 > img {
-  display: block;
+.section-3-bottom-1 img {
+  /* display: block; */
 }
 .section-3-bottom-2 {
   width: 25%;
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;
   float: left;
 }
-.section-3-bottom-2 > img {
-  display: block;
+.section-3-bottom-2 img {
+  /* display: block; */
 }
 .section-3-bottom-3 {
   width: 25%;
+  border-right: 1px solid white;
+  border-bottom: 1px solid white;
   float: left;
 }
-.section-3-bottom-3 > img {
-  display: block;
+.section-3-bottom-3 img {
+  /* display: block; */
 }
 .section-3-bottom-4 {
   width: 25%;
+  border-bottom: 1px solid white;
   float: left;
 }
-.section-3-bottom-4 > img {
-  display: block;
+.section-3-bottom-4 img {
+  /* display: block;s */
 }
 .section-3-bottom-5 {
   width: 25%;
+  border-right: 1px solid white;
   float: left;
 }
-.section-3-bottom-5 > img {
-  height: 45px;
-  display: block;
+.section-3-bottom-5 img {
+  height: 35px;
+  /* display: block; */
 }
 .section-3-bottom-6 {
   width: 25%;
+  border-right: 1px solid white;
   float: left;
 }
-.section-3-bottom-6 > img {
-  display: block;
+.section-3-bottom-6 img {
+  /* display: block; */
 }
 .section-3-bottom-7 {
   width: 25%;
+  border-right: 1px solid white;
   float: left;
 }
-.section-3-bottom-7 > img {
-  display: block;
+.section-3-bottom-7 img {
+  /* display: block; */
 }
 .section-3-bottom-8 {
   width: 25%;
   float: left;
 }
-.section-3-bottom-8 > img {
-  display: block;
+.section-3-bottom-8 img {
+  /* display: block; */
 }
 
 .section-4 {
+  height: 500px;
   width: 100vw;
-  background-color: grey;
+  background-color: white;
+  color: #33475B;
 }
 .section-4::after {
   content: "";
@@ -312,24 +435,39 @@ h3 {
 .section-4-top-left {
   height: 20%;
   width: 40%;
+  text-align: center;
   float: left;
 }
 .section-4-top-right {
   height: 20%;
   width: 60%;
+  text-align: left;
   float: left;
 }
 .section-4-top-right img {
-  height: 40px;
+  height: 20px;
+  display: inline-block;
 }
 .section-4-bottom-left {
   height: 80%;
   width: 40%;
   float: left;
 }
+.section-4-bottom-left a {
+  text-decoration: none;
+  border: 1px solid #FF7A59;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #FF7A59;
+  color: white;
+}
+.section-4-bottom-left a:hover {
+  background-color: #FFBCAC;
+}
 .section-4-bottom-right {
   height: 80%;
   width: 60%;
+  text-align: right;
   float: left;
 }
 .section-4-bottom-right img {
@@ -339,7 +477,11 @@ h3 {
 .footer {
   height: 300px;
   width: 100vw;
-  background-color: purple;
+  background-color: #2D3E50;
+  color: white;
+}
+.footer ul {
+  list-style: none;
 }
 
 .footer-top-1 {
@@ -358,16 +500,30 @@ h3 {
   width: 25%;
   float: left;
 }
+.footer-top-4 a {
+  text-decoration: none;
+  background-color: white;
+  border-radius: 5px;
+  color: #2D3E50;
+}
+.footer-top-4 a:hover {
+  background-color: #EAF0F6;
+}
+
 
 .footer-bottom-1 {
   width: 100%;
+  text-align: center;
   border-bottom: 1px solid white;
 }
-.footer-bottom-2-1{
+.footer-bottom-2-1 {
   width: 50%;
   float: left;
 }
-.footer-bottom-2-1{
+.footer-bottom-2-1 {
   width: 50%;
   float: left;
+}
+.footer-bottom-2-2 {
+  text-align: right;
 }
