--- a/css/style.css
+++ b/css/style.css
@@ -269,99 +269,70 @@
 /* /section-2-center */
 
 /* section-2-bottom */
-.section-2-bottom-1 {
-  height: 600px;
+.section-2-bottom-1, .section-2-bottom-3 {
   width: 30%;
   text-align: center;
-  /* line-height: 50px; */
   background-color: white;
   margin-top: 20px;
+  padding: 30px;
+  margin-bottom: 40px;
+  border-radius: 10px;
   float: left;
 }
+
 .section-2-bottom-2 {
-  height: 600px;
   width: 30%;
   text-align: center;
-  /* line-height: 50px; */
   background-color: white;
   margin-top: 20px;
   margin-left: 5%;
   margin-right: 5%;
+  padding: 30px;
+  margin-bottom: 40px;
+  border-radius: 10px;
   float: left;
-}
-.section-2-bottom-3 {
-  height: 600px;
-  width: 30%;
-  text-align: center;
-  /* line-height: 50px; */
-  background-color: white;
-  margin-top: 20px;
-  float: left;
-}
-.section-2-bottom-1 img {
-  height: 100px;
-}
-.section-2-bottom-2 img {
-  height: 100px;
-}
-.section-2-bottom-3 img {
-  height: 100px;
-}
-.section-2-bottom-1 ul {
-  list-style: none;
-  text-align: left;
-}
-.section-2-bottom-2 ul {
-  list-style: none;
-  text-align: left;
-}
-.section-2-bottom-3 ul {
-  list-style: none;
-  text-align: left;
-}
-.section-2-bottom-1 i {
-  color: #FF7A59;
-}
-.section-2-bottom-2 i {
-  color: #FF7A59;
-}
-.section-2-bottom-3 i {
-  color: #FF7A59;
-}
-.section-2-bottom-1 a {
-  text-decoration: none;
-  border: 1px solid #FF7A59;
-  padding: 20px;
-  border-radius: 5px;
-  background-color: #FF7A59;
-  color: white;
-}
-.section-2-bottom-1 a:hover {
-  background-color: #FFBCAC;
-}
-.section-2-bottom-2 a {
-  text-decoration: none;
-  border: 1px solid #FF7A59;
-  padding: 20px;
-  border-radius: 5px;
-  background-color: #FF7A59;
-  color: white;
-}
-.section-2-bottom-2 a:hover {
-  background-color: #FFBCAC;
-}
-.section-2-bottom-3 a {
-  text-decoration: none;
-  border: 1px solid #FF7A59;
-  padding: 20px;
-  border-radius: 5px;
-  background-color: #FF7A59;
-  color: white;
-}
-.section-2-bottom-3 a:hover {
-  background-color: #FFBCAC;
 }
 
+.section-2-bottom-1 img, .section-2-bottom-2 img, .section-2-bottom-3 img {
+  height: 100px;
+  margin-top: 20px;
+}
+
+.section-2-bottom-1 h2, .section-2-bottom-2 h2, .section-2-bottom-3 h2 {
+  margin-top: 40px;
+}
+
+.section-2-bottom-1 p, .section-2-bottom-2 p, .section-2-bottom-3 p {
+  margin-top: 40px;
+  margin-bottom: 40px;
+}
+
+.section-2-bottom-1 h3, .section-2-bottom-2 h3, .section-2-bottom-3 h3 {
+  text-transform: uppercase;
+  margin-top: 30px;
+  margin-bottom: 30px;
+}
+
+.section-2-bottom-1 ul, .section-2-bottom-2 ul, .section-2-bottom-3 ul {
+  list-style: none;
+  text-align: left;
+  margin-bottom: 60px;
+}
+
+.section-2-bottom-1 i, .section-2-bottom-2 i, .section-2-bottom-3 i {
+  color: #FF7A59;
+}
+
+.section-2-bottom-1 a, .section-2-bottom-2 a, .section-2-bottom-3 a {
+  text-decoration: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  background-color: #FF7A59;
+  color: white;
+}
+.section-2-bottom-1 a:hover, .section-2-bottom-2 a:hover, .section-2-bottom-3 a:hover {
+  background-color: #FFBCAC;
+}
 
 
 .section-3 {
@@ -370,120 +341,109 @@
   color: white;
   background: linear-gradient(to right, #00ABB6, #00BAA7);
 }
-/* .section-3::after {
-  content: "";
-  display: table;
-  clear: both;
-} */
-.section-3 p {
-  color: white;
+
+.section-3-top h2, .section-3-top p {
+  padding: 40px;
 }
 
-.section-3-top {
-  /* width: 100vw; */
-}
-
-
-.section-3-bottom-1 {
+.section-3-bottom-1, .section-3-bottom-2, .section-3-bottom-3 {
   width: 25%;
   border-right: 1px solid white;
   border-bottom: 1px solid white;
+  padding: 20px;
   float: left;
 }
-.section-3-bottom-1 img {
-  /* display: block; */
-}
-.section-3-bottom-2 {
-  width: 25%;
-  border-right: 1px solid white;
-  border-bottom: 1px solid white;
-  float: left;
-}
-.section-3-bottom-2 img {
-  /* display: block; */
-}
-.section-3-bottom-3 {
-  width: 25%;
-  border-right: 1px solid white;
-  border-bottom: 1px solid white;
-  float: left;
-}
-.section-3-bottom-3 img {
-  /* display: block; */
-}
+
 .section-3-bottom-4 {
   width: 25%;
   border-bottom: 1px solid white;
+  padding: 20px;
   float: left;
-}
-.section-3-bottom-4 img {
-  /* display: block;s */
-}
-.section-3-bottom-5 {
-  width: 25%;
-  border-right: 1px solid white;
-  float: left;
-}
-.section-3-bottom-5 img {
-  height: 35px;
-  /* display: block; */
-}
-.section-3-bottom-6 {
-  width: 25%;
-  border-right: 1px solid white;
-  float: left;
-}
-.section-3-bottom-6 img {
-  /* display: block; */
-}
-.section-3-bottom-7 {
-  width: 25%;
-  border-right: 1px solid white;
-  float: left;
-}
-.section-3-bottom-7 img {
-  /* display: block; */
-}
-.section-3-bottom-8 {
-  width: 25%;
-  float: left;
-}
-.section-3-bottom-8 img {
-  /* display: block; */
 }
 
+.section-3-bottom-5, .section-3-bottom-6, .section-3-bottom-7 {
+  width: 25%;
+  border-right: 1px solid white;
+  padding: 20px;
+  margin-bottom: 60px;
+  float: left;
+}
+
+.section-3-bottom-8 {
+  width: 25%;
+  padding: 20px;
+  padding-bottom: 60px;
+  float: left;
+}
+
+.section-3-bottom-5 img {
+  height: 30px;
+}
+
+.section-3-bottom-1 h2, .section-3-bottom-1 p {
+  padding: 10px;
+}
+.section-3-bottom-2 h2, .section-3-bottom-2 p {
+  padding: 10px;
+}
+.section-3-bottom-3 h2, .section-3-bottom-3 p {
+  padding: 10px;
+}
+.section-3-bottom-4 h2, .section-3-bottom-4 p {
+  padding: 10px;
+}
+.section-3-bottom-5 h2, .section-3-bottom-5 p {
+  padding: 10px;
+}
+.section-3-bottom-6 h2, .section-3-bottom-6 p {
+  padding: 10px;
+}
+.section-3-bottom-7 h2, .section-3-bottom-7 p {
+  padding: 10px;
+}
+.section-3-bottom-8 h2, .section-3-bottom-8 p {
+  padding: 10px;
+}
+
+
 .section-4 {
-  height: 500px;
+  /* height: 800px; */
   width: 100vw;
   background-color: white;
   color: #33475B;
-}
-.section-4::after {
-  content: "";
-  display: table;
-  clear: both;
 }
 
 .section-4-top-left {
   height: 20%;
   width: 40%;
   text-align: center;
+  margin-top: 40px;
+  padding: 40px;
   float: left;
 }
 .section-4-top-right {
   height: 20%;
   width: 60%;
   text-align: left;
+  margin-top: 40px;
+  padding: 30px;
   float: left;
 }
 .section-4-top-right img {
-  height: 20px;
+  height: 25px;
   display: inline-block;
+  margin: 10px;
 }
 .section-4-bottom-left {
   height: 80%;
   width: 40%;
   float: left;
+}
+.section-4-bottom-left h2 {
+  margin: 30px 0;
+}
+.section-4-bottom-left p {
+  margin: 30px 0;
 }
 .section-4-bottom-left a {
   text-decoration: none;
@@ -503,45 +463,74 @@
   float: left;
 }
 .section-4-bottom-right img {
-  height: 200px;
+  height: 300px;
 }
 
 .footer {
-  height: 300px;
+  /* height: 600px; */
   width: 100vw;
   background-color: #2D3E50;
   color: white;
 }
+
 .footer ul {
   list-style: none;
+  color: #EAF0F6;
+}
+.footer a {
+  text-decoration: none;
+  color: #EAF0F6;
+}
+.footer a:hover {
+  text-decoration: underline;
+  color: #7FD1DE;
 }
 
 .footer-top-1 {
   width: 25%;
+  margin-top: 40px;
+  line-height: 30px;
   float: left;
 }
+
 .footer-top-2 {
   width: 25%;
+  margin-top: 40px;
+  line-height: 30px;
   float: left;
 }
 .footer-top-3 {
   width: 25%;
+  margin-top: 40px;
+  line-height: 30px;
   float: left;
 }
 .footer-top-4 {
   width: 25%;
+  margin-top: 40px;
+  line-height: 30px;
   float: left;
 }
-.footer-top-4 a {
+
+#contact-support {
   text-decoration: none;
   background-color: white;
+  padding: 5px;
   border-radius: 5px;
   color: #2D3E50;
 }
-.footer-top-4 a:hover {
+#contact-support:hover {
   background-color: #EAF0F6;
 }
 
+#footer-icon {
+  text-decoration: none;
+  margin-right: 20px;
+  color: #EAF0F6;
+}
+#footer-icon:hover {
+  color: #7FD1DE;
+}
 
 .footer-bottom-1 {
   width: 100%;
@@ -550,12 +539,17 @@
 }
 .footer-bottom-2-1 {
   width: 50%;
-  float: left;
-}
-.footer-bottom-2-1 {
-  width: 50%;
+  margin-top: 20px;
+  margin-bottom: 20px;
   float: left;
 }
 .footer-bottom-2-2 {
+  width: 50%;
+  margin-top: 20px;
   text-align: right;
+  float: left;
+}
+
+.footer-bottom-2-2 a:last-child {
+  margin-left: 20px;
 }
