--- a/css/style.css
+++ b/css/style.css
@@ -148,7 +148,7 @@
 /* /header-bottom-right */
 /* /Header */
 
-/* section-1 */
+/* Section 1 */
 .section-1 {
   height: 695px;
   width: 100vw;
@@ -181,9 +181,9 @@
 .section-1-left a:hover {
   background-color: #FFBCAC;
 }
-/* /section-1 */
+/* /Section 1 */
 
-/* section-2 */
+/* Section 2 */
 .section-2 {
   width: 100vw;
   background-color: #EAF0F6;
@@ -213,40 +213,40 @@
   border-radius: 10px;
 }
 
-.section-2-center-1 {
+.section-2-center-left {
   width: 20%;
   text-align: center;
   padding: 40px;
   float: left;
 }
-.section-2-center-1 img {
+.section-2-center-left img {
   height: 100px;
   margin-bottom: 30px;
 }
-.section-2-center-1 a {
+.section-2-center-left a {
   text-decoration: none;
   padding: 10px 20px;
   border-radius: 5px;
   background-color: #FF7A59;
   color: white;
 }
-.section-2-center-1 a:hover {
+.section-2-center-left a:hover {
   background-color: #FFBCAC;
 }
 
-.section-2-center-2 {
+.section-2-center-right {
   width: 80%;
   text-align: left;
   padding: 40px;
   float: left;
 }
-.section-2-center-2 h2 {
+.section-2-center-right h2 {
   margin-bottom: 30px;
 }
-.section-2-center-2 p {
+.section-2-center-right p {
   margin-bottom: 20px;
 }
-.section-2-center-2 h3 {
+.section-2-center-right h3 {
   display: inline-block;
   text-transform: uppercase;
 }
@@ -257,19 +257,19 @@
   vertical-align: super;
   margin: 0 50px;
 }
-.section-2-center-2 li {
+.section-2-center-right li {
   display: inline-block;
   text-decoration: none;
   margin-top: 20px;
   margin-right: 20px;
 }
-.section-2-center-2 i {
+.section-2-center-right i {
   color: #FF7A59;
 }
 /* /section-2-center */
 
 /* section-2-bottom */
-.section-2-bottom-1, .section-2-bottom-3 {
+.section-2-bottom-left, .section-2-bottom-right {
   width: 30%;
   text-align: center;
   background-color: white;
@@ -280,7 +280,7 @@
   float: left;
 }
 
-.section-2-bottom-2 {
+.section-2-bottom-center {
   width: 30%;
   text-align: center;
   background-color: white;
@@ -293,48 +293,50 @@
   float: left;
 }
 
-.section-2-bottom-1 img, .section-2-bottom-2 img, .section-2-bottom-3 img {
+.section-2-bottom-left img, .section-2-bottom-center img, .section-2-bottom-right img {
   height: 100px;
   margin-top: 20px;
 }
 
-.section-2-bottom-1 h2, .section-2-bottom-2 h2, .section-2-bottom-3 h2 {
+.section-2-bottom-left h2, .section-2-bottom-center h2, .section-2-bottom-right h2 {
   margin-top: 40px;
 }
 
-.section-2-bottom-1 p, .section-2-bottom-2 p, .section-2-bottom-3 p {
+.section-2-bottom-left p, .section-2-bottom-center p, .section-2-bottom-right p {
   margin-top: 40px;
   margin-bottom: 40px;
 }
 
-.section-2-bottom-1 h3, .section-2-bottom-2 h3, .section-2-bottom-3 h3 {
+.section-2-bottom-left h3, .section-2-bottom-center h3, .section-2-bottom-right h3 {
   text-transform: uppercase;
   margin-top: 30px;
   margin-bottom: 30px;
 }
 
-.section-2-bottom-1 ul, .section-2-bottom-2 ul, .section-2-bottom-3 ul {
+.section-2-bottom-left ul, .section-2-bottom-center ul, .section-2-bottom-right ul {
   list-style: none;
   text-align: left;
   margin-bottom: 60px;
 }
 
-.section-2-bottom-1 i, .section-2-bottom-2 i, .section-2-bottom-3 i {
+.section-2-bottom-left i, .section-2-bottom-center i, .section-2-bottom-right i {
   color: #FF7A59;
 }
 
-.section-2-bottom-1 a, .section-2-bottom-2 a, .section-2-bottom-3 a {
+.section-2-bottom-left a, .section-2-bottom-center a, .section-2-bottom-right a {
   text-decoration: none;
   padding: 10px 20px;
   border-radius: 5px;
   background-color: #FF7A59;
   color: white;
 }
-.section-2-bottom-1 a:hover, .section-2-bottom-2 a:hover, .section-2-bottom-3 a:hover {
+.section-2-bottom-left a:hover, .section-2-bottom-center a:hover, .section-2-bottom-right a:hover {
   background-color: #FFBCAC;
 }
+/* /section-2-bottom */
+/* /Section 2 */
 
-
+/* Section 3 */
 .section-3 {
   width: 100vw;
   text-align: center;
@@ -346,6 +348,7 @@
   padding: 40px;
 }
 
+/* section-3-bottom */
 .section-3-bottom-1, .section-3-bottom-2, .section-3-bottom-3 {
   width: 25%;
   border-right: 1px solid white;
@@ -404,10 +407,11 @@
 .section-3-bottom-8 h2, .section-3-bottom-8 p {
   padding: 10px;
 }
+/* /section-3-bottom */
+/* /Section 3 */
 
-
+/* Section 4 */
 .section-4 {
-  /* height: 800px; */
   width: 100vw;
   background-color: white;
   color: #33475B;
@@ -421,6 +425,7 @@
   padding: 40px;
   float: left;
 }
+
 .section-4-top-right {
   height: 20%;
   width: 60%;
@@ -434,6 +439,7 @@
   display: inline-block;
   margin: 10px;
 }
+
 .section-4-bottom-left {
   height: 80%;
   width: 40%;
@@ -447,7 +453,6 @@
 }
 .section-4-bottom-left a {
   text-decoration: none;
-  border: 1px solid #FF7A59;
   padding: 10px;
   border-radius: 5px;
   background-color: #FF7A59;
@@ -456,6 +461,7 @@
 .section-4-bottom-left a:hover {
   background-color: #FFBCAC;
 }
+
 .section-4-bottom-right {
   height: 80%;
   width: 60%;
@@ -465,14 +471,14 @@
 .section-4-bottom-right img {
   height: 300px;
 }
+/* /Section 4 */
 
+/* Footer */
 .footer {
-  /* height: 600px; */
   width: 100vw;
   background-color: #2D3E50;
   color: white;
 }
-
 .footer ul {
   list-style: none;
   color: #EAF0F6;
@@ -486,26 +492,7 @@
   color: #7FD1DE;
 }
 
-.footer-top-1 {
-  width: 25%;
-  margin-top: 40px;
-  line-height: 30px;
-  float: left;
-}
-
-.footer-top-2 {
-  width: 25%;
-  margin-top: 40px;
-  line-height: 30px;
-  float: left;
-}
-.footer-top-3 {
-  width: 25%;
-  margin-top: 40px;
-  line-height: 30px;
-  float: left;
-}
-.footer-top-4 {
+.footer-top-1, .footer-top-2, .footer-top-3, .footer-top-4 {
   width: 25%;
   margin-top: 40px;
   line-height: 30px;
@@ -522,7 +509,6 @@
 #contact-support:hover {
   background-color: #EAF0F6;
 }
-
 #footer-icon {
   text-decoration: none;
   margin-right: 20px;
@@ -537,19 +523,20 @@
   text-align: center;
   border-bottom: 1px solid white;
 }
-.footer-bottom-2-1 {
+.footer-bottom-2-left {
   width: 50%;
   margin-top: 20px;
   margin-bottom: 20px;
   float: left;
 }
-.footer-bottom-2-2 {
+.footer-bottom-2-right {
   width: 50%;
   margin-top: 20px;
   text-align: right;
   float: left;
 }
 
-.footer-bottom-2-2 a:last-child {
+.footer-bottom-2-right a:last-child {
   margin-left: 20px;
 }
+/* /Footer */
