--- a/css/style.css
+++ b/css/style.css
@@ -170,11 +170,13 @@
 .section-1-left h1 {
   padding-top: 60px;
   color: #33475B;
+  font-size: 50px;
 }
 .section-1-left p {
   padding-top: 60px;
   padding-bottom: 60px;
   color: #33475B;
+  line-height: 30px;
 }
 .section-1-left a {
   text-decoration: none;
@@ -209,6 +211,7 @@
 }
 .section-2-top p {
   margin-bottom: 60px;
+  line-height: 30px;
 }
 /* /section-2-top */
 
@@ -220,9 +223,9 @@
 }
 
 .section-2-center-left {
-  width: 20%;
+  width: 30%;
   text-align: center;
-  padding: 40px;
+  padding: 50px 70px;
   float: left;
 }
 
@@ -242,9 +245,11 @@
 }
 
 .section-2-center-right {
-  width: 80%;
+  width: 70%;
   text-align: left;
-  padding: 40px;
+  padding: 50px;
+  padding-left: 0;
+  padding-right: 80px;
   float: left;
 }
 
@@ -253,17 +258,18 @@
 }
 .section-2-center-right p {
   margin-bottom: 20px;
+  line-height: 30px;
 }
 .section-2-center-right h3 {
   display: inline-block;
   text-transform: uppercase;
 }
 .h3 {
-  width: 500px;
+  width: 400px;
   display: inline-block;
   border-bottom: 1px solid black;
   vertical-align: super;
-  margin: 0 50px;
+  margin: 0 40px;
 }
 .section-2-center-right li {
   display: inline-block;
@@ -311,6 +317,7 @@
 .section-2-bottom p {
   margin-top: 40px;
   margin-bottom: 40px;
+  line-height: 30px;
 }
 .section-2-bottom h3 {
   text-transform: uppercase;
@@ -346,8 +353,14 @@
   background: linear-gradient(to right, #00ABB6, #00BAA7);
 }
 
-.section-3-top h2, .section-3-top p {
+.section-3-top h2 {
   padding: 40px;
+  padding-bottom: 0;
+  font-size: 30px;
+}
+.section-3-top p {
+  padding: 40px 0;
+  line-height: 30px;
 }
 
 /* section-3-bottom */
@@ -385,7 +398,10 @@
   height: 30px;
 }
 
-.section-3-bottom h2, .section-3-bottom p {
+.section-3-bottom h2 {
+  padding: 10px;
+}
+.section-3-bottom p {
   padding: 10px;
 }
 /* /section-3-bottom */
