--- a/css/style.css
+++ b/css/style.css
@@ -416,37 +416,49 @@
 }
 
 .section-4-top-left {
-  height: 20%;
-  width: 40%;
-  text-align: center;
-  margin-top: 40px;
-  padding: 40px;
-  float: left;
+  width: 39%;
+  padding-top: 40px;
+  padding-left: 60px;
+  display: inline-block;
 }
 
 .section-4-top-right {
-  height: 20%;
   width: 60%;
-  text-align: left;
-  margin-top: 40px;
-  padding: 30px;
-  float: left;
+  display: inline-block;
+}
+
+.section-4-bottom-left {
+  width: 39%;
+  padding-top: 50px;
+  display: inline-block;
+}
+
+.section-4-bottom-right {
+  width: 60%;
+  text-align: right;
+  display: inline-block;
+}
+
+.section-4-top-left h2 {
+  font-size: 40px;
+}
+.section-4-top-left p {
+  line-height: 30px;
 }
 
 .section-4-top-right img {
   height: 25px;
-  display: inline-block;
   margin: 10px;
+  display: inline-block;
 }
 
-.section-4-bottom-left {
-  height: 80%;
-  width: 40%;
-  float: left;
-}
-
-.section-4-bottom-left h2, .section-4-bottom-left p {
+.section-4-bottom-left h2 {
   margin: 30px 0;
+  font-size: 30px;
+}
+.section-4-bottom-left p {
+  margin: 30px 0;
+  line-height: 30px;
 }
 .section-4-bottom-left a {
   text-decoration: none;
@@ -459,15 +471,8 @@
   background-color: #FFBCAC;
 }
 
-.section-4-bottom-right {
-  height: 80%;
-  width: 60%;
-  text-align: right;
-  float: left;
-}
-
 .section-4-bottom-right img {
-  height: 300px;
+  height: 350px;
 }
 /* /Section 4 */
 
