--- a/css/style.css
+++ b/css/style.css
@@ -156,6 +156,7 @@
 /* /header-bottom-right */
 /* /Header */
 
+/* Main */
 /* Section 1 */
 .section-1 {
   height: 695px;
@@ -478,6 +479,7 @@
   height: 350px;
 }
 /* /Section 4 */
+/* /Main */
 
 /* Footer */
 .footer {
