--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ hr {
 /* Header */
 .header-top {
   height: 80px;
-  width: 100vw;
+  width: 100%;
   background-color: #EAF0F6;
   border-bottom: 1px solid #425B76;
   position: fixed;
@@ -116,7 +116,7 @@ hr {
 
 .header-bottom {
   height: 80px;
-  width: 100vw;
+  width: 100%;
   background-color: white;
   margin-top: 80px;
 }
@@ -165,7 +165,7 @@ hr {
 /* Section 1 */
 .section-1 {
   height: 695px;
-  width: 100vw;
+  width: 100%;
   background-image: url('../img/jumbotron.png');
   background-size: cover;
   background-position: center;
@@ -201,7 +201,7 @@ hr {
 
 /* Section 2 */
 .section-2 {
-  width: 100vw;
+  width: 100%;
   background-color: #EAF0F6;
   color: #33475B;
 }
@@ -346,7 +346,7 @@ hr {
 
 /* Section 3 */
 .section-3 {
-  width: 100vw;
+  width: 100%;
   text-align: center;
   color: white;
   background: linear-gradient(to right, #00ABB6, #00BAA7);
@@ -396,7 +396,7 @@ hr {
 
 /* Section 4 */
 .section-4 {
-  width: 100vw;
+  width: 100%;
   background-color: white;
   color: #33475B;
 }
@@ -461,7 +461,7 @@ hr {
 
 /* Footer */
 .footer {
-  width: 100vw;
+  width: 100%;
   background-color: #2D3E50;
   color: white;
 }
